# blood-pressure-tracker-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  entrypoint.sh  fly.toml
client/: index.html  package-lock.json  package.json
client/src/: App.vue  main.ts
client/src/components/: BloodPressureReadingForm.vue  LoginLogoutButton.vue  ReadingFromCamera.vue  ReadingsTable.vue
client/src/components/view-readings/: ExportDialog.vue  ReadingsTable.vue  ReadingsView.vue
client/src/router/: index.ts
scripts/: download_debug_folder.sh
src/: main.rs
src/auth/: mod.rs  oidc.rs
src/controllers/: blood_pressure_reading.rs  export.rs  login.rs  mod.rs  ocr.rs  weight.rs
src/repositories/: blood_pressure_readings_repository.rs  mod.rs  session_repository.rs
src/repositories/sql_lite/: mod.rs  sql_lite_blood_pressure_reading_repository.rs
src/repositories/sql_lite/migrations/: 1_create_db.sql  2_add_weight_column.sql
