[package]
name = "blood-pressure-tracker-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
axum-macros = "0.5.0"
bpm-ocr = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = {version = "1.48.0", features = ["rt-multi-thread"]}
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["fs"] }
