[package]
name = "blood-pressure-tracker-app"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.8.7", features = ["multipart", "query"] }
axum-macros = "0.5.0"
bpm-ocr = "1.0.0"
chrono = "0.4.42"
openidconnect = "4.0.1"
reqwest = "0.12.26"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio" ] }
tokio = {version = "1.48.0", features = ["rt-multi-thread"]}
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["fs"] }
tower-sessions = "0.14.0"
tower-sessions-core = { version = "0.14.0", features = ["deletion-task"] }
tower-sessions-sqlx-store = { version = "0.15.0", features= ["sqlite"] }
uuid = {version ="1.19.0", features = ["v7"]}
